--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
                 nice weather even when you're not on vacation.
             </p>
             <div class="mt-4 sm:mt-6">
-            <a class="text-sm inline-block rounded-lg shadow-lg bg-indigo-500 hover:bg-indigo-400 hover:-translate-y-0.5 transform transition
-            focus:outline-none focus:ring focus:ring-offset-2 focus:ring-indigo-500 focus:ring-opacity-50 active:bg-indigo-600 text-white px-4 py-2 uppercase tracking-wider font-semibold sm:text-base" 
+            <a class="btn" 
             href="#">
                 Book your escape.
             </a>
