Added a secondary button
Added a secondary button without a transform or shadow. Making the secondary button more subtle. Adding more intense effects to the primary button manually instead of baking them into the utility class.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
             class="px-8 py-12 max-w-md mx-auto sm:max-w-xl lg:px-12 lg:py-24 lg:max-w-full xl:mr-0 2xl:col-span-2">
         <div class="xl:max-w-xl">    
             <img 
-                class="h-10"src="/img/logo.svg" 
-                alt="Workcation"/>
+                class="h-10"src="/img/logo.svg" alt="Workcation"/>
             <img 
                 class="mt-6 rounded-lg shadow-xl sm:mt-8 sm:w-full sm:object-cover object-center sm:h-64 lg:hidden " 
                 src="/img/beach-work.jpeg" 
@@ -24,10 +23,14 @@
             <p class="mt-2 text-gray-600 sm:mt-4 sm:text-xl">Workcation helps you find work-friendly rentals in beautiful locations so you can enjoy some
                 nice weather even when you're not on vacation.
             </p>
-            <div class="mt-4 sm:mt-6">
-            <a class="btn" 
+            <div class="mt-4 space-x-1 sm:mt-6">
+            <a class="btn btn-primary shadow-lg hover:-translate-y-0.5 transform transition" 
             href="#">
-                Book your escape.
+                Book your escape
+            </a>
+            <a class="btn btn-secondary" 
+            href="#">
+                Learn more
             </a>
             </div>
         </div>
